<?xml version="1.0"?>
<package format="2">
  <name>ardusub_control</name>
  <version>1.0.0</version>
  <description>ArduSub控制系统 - 支持ROS话题控制、GUI界面和键盘控制的水下机器人控制包</description>

  <!-- 维护者信息 -->
  <maintainer email="user@example.com">ArduSub Control Team</maintainer>

  <!-- 许可证 -->
  <license>MIT</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 构建依赖 -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- 构建导出依赖 -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <!-- 执行依赖 -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Python依赖包说明 -->
  <!-- 这些需要通过pip安装: -->
  <!-- pip install pymavlink pynput -->

  <!-- 导出信息 -->
  <export>
    <!-- 其他工具可以请求此包的额外信息 -->
  </export>
</package>
